force-app/main/default/objects/Log__c/fields/IntegrationJob__c.field-meta.xml
<CustomField>
    <fullName>IntegrationJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trabalho da Integração</label>
    <referenceTo>IntegrationJob__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>