force-app/main/default/objects/Log__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origem</label>
    <type>TextArea</type>
</CustomField>