force-app/main/default/objects/Log__c/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <label>Registros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>