force-app/main/default/objects/Log__c/fields/SimplifiedEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SimplifiedEndpoint__c</fullName>
    <label>SimplifiedEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>